# calc-crc

./: CHANGELOG.md  CMakeLists.txt  README.md  calc-crc.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: cppcheck.yml  ctest.yml  gtest.yml
examples/: README.md
examples/simple/: CMakeLists.txt  readme.md
examples/simple/inc/conf/: calc_crc_conf.h
examples/simple/src/: main.c
inc/calc_crc/: calc_crc.h  calc_crc_gtypes.h  calc_crc_ptypes.h
src/: calc_crc.c
tests/: README.md
tests/cppcheck/: CMakeLists.txt
tests/cppcheck/conf/: calc_crc_conf.h
tests/cppcheck/src/: main.c
tests/ctest/: CMakeLists.txt  README.md
tests/ctest/src/tests/: main.c
tests/gtest/: CMakeLists.txt  README.md
tests/gtest/inc/conf/: calc_crc_conf.h
tests/gtest/src/: main.cpp
tests/gtest/src/tests/: performance.cpp
